<resources>
    <string name="app_name">Tirage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tirage</string>
    <string name="nav_header_subtitle">An app to draw lots elements</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="help_title">Help</string>
    <string name="category_name">Category name:</string>
    <string name="add_category_title">Add category</string>
    <string name="category_description">Category description:</string>
    <string name="category_icon">Category icon:</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="add_element_title">Add element</string>
    <string name="element_name">Element name:</string>
    <string name="nav_home">Home</string>
    <string name="home_desc1">Tirage is an application enabling the user to draw lots elements among a large amount of elements.</string>
    <string name="nav_elements">Elements</string>
    <string name="element_description">Element description:</string>
    <string name="random_back">Back</string>
    <string name="help_desc2">To start, press the top left button to display the menu and click on \"Elements\" to display the list of elements.</string>
    <string name="help_desc3">Then, click on the bottom right button to add a new element or click on the bottom left button to draw lots an element in the list.</string>
    <string name="help_desc4">Finally, your element is displayed on the screen and you can make your choice!</string>
    <string name="about_title">About</string>
    <string name="about_desc">Application made by Jocelyn Routin and Jia Qin.</string>
    <string name="nav_help">Help</string>
    <string name="settings_title">Settings</string>
    <string name="settings_language">Language:</string>
    <string name="settings_en">English</string>
    <string name="settings_fr">French</string>
    <string name="settings_save">Save</string>
</resources>
